--- a/libindy-pod/Podfile
+++ b/libindy-pod/Podfile
@@ -5,9 +5,9 @@ platform :ios, '10.2'
 workspace 'Indy.xcworkspace'
 
 def appPods
-    pod 'libsodium', '~> 1.0.12'
-    pod 'libzmq', "4.0.4"
-    pod 'OpenSSL-Universal', '~> 1.0'
+    pod 'libsodium'
+    pod 'libzmq',"4.2.3"
+    pod 'OpenSSL-XM'
     pod 'libindy', "1.15.0"
 end
 
@@ -38,7 +38,7 @@ post_install do |installer|
       end
       if target.name == 'libsodium'
         target.build_configurations.each do |config|
-            config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', 'NATIVE_LITTLE_ENDIAN=1 PACKAGE_NAME=\"libsodium\" PACKAGE_TARNAME=\"libsodium\" PACKAGE_VERSION=\"1.0.12\" PACKAGE_STRING=\"libsodium\ 1.0.12\" PACKAGE_BUGREPORT=\"https://github.com/jedisct1/libsodium/issues\" PACKAGE_URL=\"https://github.com/jedisct1/libsodium\" PACKAGE=\"libsodium\" VERSION=\"1.0.12\" HAVE_PTHREAD_PRIO_INHERIT=1 HAVE_PTHREAD=1 STDC_HEADERS=1 HAVE_SYS_TYPES_H=1 HAVE_SYS_STAT_H=1 HAVE_STDLIB_H=1 HAVE_STRING_H=1 HAVE_MEMORY_H=1 HAVE_STRINGS_H=1 HAVE_INTTYPES_H=1 HAVE_STDINT_H=1 HAVE_UNISTD_H=1 _POSIX_PTHREAD_SEMANTICS=1 NATIVE_LITTLE_ENDIAN=1 HAVE_WEAK_SYMBOLS=1 CPU_UNALIGNED_ACCESS=1 CONFIGURED=1']
+            config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', 'NATIVE_LITTLE_ENDIAN=1 PACKAGE_NAME=\"libsodium\" PACKAGE_TARNAME=\"libsodium\" PACKAGE_VERSION=\"1.0.18\" PACKAGE_STRING=\"libsodium\ 1.0.18\" PACKAGE_BUGREPORT=\"https://github.com/jedisct1/libsodium/issues\" PACKAGE_URL=\"https://github.com/jedisct1/libsodium\" PACKAGE=\"libsodium\" VERSION=\"1.0.18\" HAVE_PTHREAD_PRIO_INHERIT=1 HAVE_PTHREAD=1 STDC_HEADERS=1 HAVE_SYS_TYPES_H=1 HAVE_SYS_STAT_H=1 HAVE_STDLIB_H=1 HAVE_STRING_H=1 HAVE_MEMORY_H=1 HAVE_STRINGS_H=1 HAVE_INTTYPES_H=1 HAVE_STDINT_H=1 HAVE_UNISTD_H=1 _POSIX_PTHREAD_SEMANTICS=1 NATIVE_LITTLE_ENDIAN=1 HAVE_WEAK_SYMBOLS=1 CPU_UNALIGNED_ACCESS=1 CONFIGURED=1']
         end
       end
     end
